# ml-engineering-school

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  submit_pipeline.py
.github/workflows/: ci.yaml
Notebooks/: eda.ipynb  modelling.ipynb
Tests/: test_data_preprocessing.py
guidelines/Part-1/: 01_git_101.md  02_notebooks_to_scripts.md  03_linting_and_formatting.md  04_continuous_integration.md  05_unit_testing.md  06_code_documentation.md  07_dependencies_and_venv.md
guidelines/Part-2/: 10_mflow.md
guidelines/_assets/: git_flow.excalidraw
lib/: data_loading.py  data_preprocessing.py  data_schema.py  evaluation.py  model_evaluation.py  modelling.py  plots.py  preprocessing.py  utils.py  validate_config.py
notebooks/: eda_solution.ipynb  eda_starter.ipynb  modeling_solution.ipynb  modeling_starter.ipynb  notebook.ipynb  solution.ipynb
tests/: test_preprocessing.py
