[tool.poetry]
name = "axa-mleng-school-original"
version = "0.1.0"
description = ""
authors = ["Daniel AL CHOBOQ <daniel.al-choboq@artefact.com>", "Jules BERTRAND <jules.bertrand@artefact.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.8"
nbstripout = "^0.7.1"
bandit = "^1.7.10"
codespell = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "B",    # bugbear
  "C4",   # comprehensions
  "C90",  # mccabe
  "D",    # docstrings
  "E",    # flake8
  "F",    # flake8
  "W",    # flake8
  "S",    # bandit
  "N",    # pep8-naming
  "I",    # isort
  "ANN",  # annotations and typing
  "T20",  # print statements
  "ARG",  # unused arguments
]
ignore = [
  "D100",
  "D205",
  "D415",
]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.ruff.format]
quote-style = "double"
