[tool.poetry]
name = "axa-mleng-school-original"
version = "0.1.0"
description = ""
authors = ["Daniel AL CHOBOQ <daniel.al-choboq@artefact.com>", "Jules BERTRAND <jules.bertrand@artefact.com>"]
readme = "README.md"
packages = [
  { include = "lib", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
loguru = "^0.7.2"
plotly = "^5.24.1"
mlflow = "^2.17.0"
pandera = "^0.20.4"
shap = "^0.46.0"
numba = "^0.60.0"  # Required by shap
llvmlite = "^0.43.0"  # Required by numba
fairlearn = "^0.11.0"
jinja2 = "^3.1.4"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.0"
nbstripout = "^0.7.1"
bandit = "^1.7.10"
codespell = "^2.3.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.azure.dependencies]
azure-ai-ml = "^1.21.1"
python-dotenv = "^1.0.1"
fire = "^0.7.0"


[tool.poetry.group.validation.dependencies]
toml = "^0.10.2"
pytest = "^8.3.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "B",    # bugbear
  "C4",   # comprehensions
  "C90",  # mccabe
  "D",    # docstrings
  "E",    # flake8
  "F",    # flake8
  "W",    # flake8
  "S",    # bandit
  "N",    # pep8-naming
  "I",    # isort
  "ANN",  # annotations and typing
  "T20",  # print statements
  "ARG",  # unused arguments
]
ignore = [
  "D100",
  "D104",
  "D205",
  "D415",
  "ANN101",
  "ANN003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.ruff.lint.per-file-ignores]
"validation_tests/*" = ["D", "S", "ANN001", "ANN201"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["validation_tests", "tests"]
